Relocated intercom button and fixed header spacing for .landing

--- a/src/scss/site/elements.scss
+++ b/src/scss/site/elements.scss
@@ -70,8 +70,8 @@ a {
 
     &.intercom-launcher {
         position: fixed;
-        right: 0;
-        bottom: 0;
+        right: 40px;
+        bottom: 40px;
         
         z-index: 45;
     }
