--- a/src/scss/site/layout.scss
+++ b/src/scss/site/layout.scss
@@ -546,10 +546,6 @@ footer {
 
         &.landing {
             height: 85vh;
-
-            h2 {
-                line-height: 6rem;
-            }
         }
 
         &.landing-overlap {
